# video-story-teller

./: .gitignore  README.md  index.html  pyproject.toml
research/: translator.ipynb  txt2image.ipynb  txt2speech.ipynb  txt2speech_test.py
story_teller/: __main__.py  utils.py
story_teller/crawler/: pipeline.py  reddit.py
story_teller/database/: connect.py  enum.py
story_teller/database/crud/: create.py  read.py  update.py
story_teller/editor/: __main__.py  backend.py  editor.yaml  text_editor.py  text_editor_tmp.py  translator.py  view_fonts.py
story_teller/generator/: __main__.py  audio_generator.py  pipeline.py
